--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -39,3 +39,14 @@
 .title {
   text-align: center;
 }
+
+@media screen and (max-width: 576px) {
+  .card1,
+  .card2,
+  .card3,
+  .card4 {
+    width: min-content;
+    margin: auto;
+    margin-bottom: 5%;
+  }
+}
