--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -6,6 +6,7 @@
 .card {
   border-radius: 30px;
   max-width: 270px;
+  height: 390px;
   box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.34);
   transition: transform 0.4s;
 }
@@ -24,7 +25,7 @@
 }
 
 .title {
-  text-align: center;
+  text-align: left;
   font-family: Gilroy;
   font-size: 17px;
   color: #f47925;
@@ -32,7 +33,7 @@
 }
 
 .content {
-  text-align: center;
+  text-align: left;
 }
 
 button {
