--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -20,7 +20,6 @@
 
 .img {
   border-radius: 30px 30px 0px 60px;
-  width: auto;
   height: 150px;
 }
 
@@ -84,4 +83,63 @@ button {
     margin: auto;
     margin-bottom: 5%;
   }
+
+  .Carousel {
+    padding: 10%;
+    height: 100%;
+    width: 385px;
+    margin: auto;
+    left: 50px;
+    background-color: #f47925;
+  }
+
+  .itemC {
+    padding: 0px;
+    width: 470px;
+    left: -70px;
+  }
+
+  .carousel-control-next-icon {
+    left: 100px;
+    position: relative;
+  }
+
+  .carousel-control-prev-icon {
+    left: 1000px;
+    position: relative;
+  }
+}
+
+/****Carousel****/
+.Carousel {
+  padding: 0%;
+  height: 100%;
+}
+
+.itemC {
+  padding: 35px;
+}
+
+.carousel-indicators {
+  visibility: hidden;
+}
+
+.carousel-control-prev-icon {
+  background-color: #f47925;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  left: -130px;
+  position: relative;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.carousel-control-next-icon {
+  background-color: #f47925;
+  left: 100px;
+  position: relative;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  position: relative;
+  cursor: pointer;
 }
