--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,11 +1,11 @@
-.Container {
+.Carousel {
   margin-top: 5%;
   margin-bottom: 5%;
 }
 
 .card {
   border-radius: 30px;
-  max-width: 270px;
+  max-width: 290px;
   height: 390px;
   box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.34);
   transition: transform 0.4s;
@@ -83,63 +83,9 @@ button {
     margin: auto;
     margin-bottom: 5%;
   }
-
-  .Carousel {
-    padding: 10%;
-    height: 100%;
-    width: 385px;
-    margin: auto;
-    left: 50px;
-    background-color: #f47925;
-  }
-
-  .itemC {
-    padding: 0px;
-    width: 470px;
-    left: -70px;
-  }
-
-  .carousel-control-next-icon {
-    left: 100px;
-    position: relative;
-  }
-
-  .carousel-control-prev-icon {
-    left: 1000px;
-    position: relative;
-  }
 }
 
-/****Carousel****/
-.Carousel {
-  padding: 0%;
-  height: 100%;
-}
-
-.itemC {
-  padding: 35px;
-}
-
-.carousel-indicators {
-  visibility: hidden;
-}
-
-.carousel-control-prev-icon {
-  background-color: #f47925;
-  background-size: 100%, 100%;
-  border-radius: 50%;
-  left: -130px;
+.carouselCard {
+  padding: 20px;
   position: relative;
-  cursor: pointer;
-  padding: 10px;
-}
-
-.carousel-control-next-icon {
-  background-color: #f47925;
-  left: 100px;
-  position: relative;
-  background-size: 100%, 100%;
-  border-radius: 50%;
-  position: relative;
-  cursor: pointer;
 }
