--- a/src/Styles/typehead.css
+++ b/src/Styles/typehead.css
@@ -1,11 +1,18 @@
-body {
-  background-color: beige;
-}
-
 .rbt-aux {
   color: rgb(212, 179, 179);
 }
 
 .container {
-  margin-top: 25%;
+  margin-top: -400px;
+  margin-left: 400px;
+  width: 700px;
+  position: absolute;
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    margin-top: -400px;
+    margin-left: 0px;
+    width: 500px;
+  }
 }
