--- a/src/Styles/typehead.css
+++ b/src/Styles/typehead.css
@@ -3,16 +3,31 @@
 }
 
 .container {
-  margin-top: -400px;
-  margin-left: 400px;
-  width: 700px;
-  position: absolute;
+  padding: 50px;
+  margin: auto;
+}
+
+.typehead {
+  margin-top: 25%;
 }
 
 @media screen and (max-width: 576px) {
-  .container {
-    margin-top: -400px;
-    margin-left: 0px;
-    width: 500px;
+  .typehead {
+    margin-top: 75%;
   }
+}
+
+@media screen and (max-width: 720px) {
+  .typehead {
+    margin-top: 60%;
+  }
+}
+
+.bg {
+  background-image: url("https://images.unsplash.com/photo-1518599904199-0ca897819ddb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
