--- a/src/Styles/typehead.css
+++ b/src/Styles/typehead.css
@@ -2,32 +2,34 @@
   color: rgb(212, 179, 179);
 }
 
-.container {
-  padding: 50px;
-  margin: auto;
-}
-
 .typehead {
-  margin-top: 25%;
+  padding-top: 20%;
+  width: 800px;
+  margin: auto;
 }
 
 @media screen and (max-width: 576px) {
   .typehead {
-    margin-top: 75%;
+    padding-top: 10%;
+    width: 100%;
+    margin: auto;
   }
 }
 
 @media screen and (max-width: 720px) {
   .typehead {
-    margin-top: 60%;
+    padding-top: 60%;
+    width: 100%;
+    margin: auto;
   }
 }
 
-.bg {
+body {
   background-image: url("https://images.unsplash.com/photo-1518599904199-0ca897819ddb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding: 20px;
 }
