--- a/src/Styles/typehead.css
+++ b/src/Styles/typehead.css
@@ -24,7 +24,8 @@
   }
 }
 
-body {
+/* {
+  /**body {
   background-image: url("https://images.unsplash.com/photo-1518599904199-0ca897819ddb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80");
   height: 100vh;
   background-position: center;
@@ -33,3 +34,4 @@ body {
   position: relative;
   padding: 20px;
 }
+}*/
